# libbal

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  autoformat.sh  bal.c  bal.code-workspace  bal.h  bal.hh  balclient.cc  balclient.hh  balcommon.cc  balcommon.hh  balerrors.c  balerrors.h  balhelpers.c  balhelpers.h  balinternal.c  balinternal.h  balplatform.h  balserver.cc  balserver.hh  baltypes.h  lint.sh  main.cc  main.cpp  sal.c  sal.h  version.h.in
.github/workflows/: cmake-multi-platform.yml
.reuse/: dep5
LICENSES/: MIT.txt
include/: bal.h  bal.hh
include/bal/: errors.h  helpers.h  internal.h  platform.h  state.h  types.h  version.h.in
sample/: balclient.cc  balclient.hh  balcommon.cc  balcommon.hh  balserver.cc  balserver.hh
src/: bal.c  balerrors.c  balhelpers.c  balinternal.c  balstate.c
tests/: tests++.cc  tests++.hh  tests.c  tests.h  tests_shared.c  tests_shared.h
